# real_time_object_detection_app

./: README.md  app.py  app2.py  detection_app.ipynb  main.py  pyproject.toml
