[project]
name = "real-time-object-detection-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.45.1",
    "ultralytics>=8.3.139",
]
